# Three_Tier_Architecture

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: notebook.ipynb
src/database/: create_db.py  create_table.py  insert_data.py
src/rename_app_folder/: app.py
